force-app/main/default/objects/FAQ__kav/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <description>Process to be followed by CS to solve the case.</description>
    <inlineHelpText>Process to be followed by CS to solve the case.</inlineHelpText>
    <label>Procedure</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>