force-app/main/default/objects/FAQ__kav/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publisher</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FAQs</relationshipName>
    <type>Lookup</type>
</CustomField>