force-app/main/default/objects/FAQ__kav/fields/Solution_Artical__c.field-meta.xml
<CustomField>
    <fullName>Solution_Artical__c</fullName>
    <description>to edit solution article</description>
    <label>Solution Artical</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>