force-app/main/default/objects/FAQ__kav/recordTypes/FAQs.recordType-meta.xml
<RecordType>
    <fullName>FAQs</fullName>
    <active>true</active>
    <description>Frequently asked questions</description>
    <label>FAQs</label>
</RecordType>