force-app/main/default/objects/FAQ__kav/recordTypes/Solutions.recordType-meta.xml
<RecordType>
    <fullName>Solutions</fullName>
    <active>true</active>
    <description>Technical Solutions</description>
    <label>Solutions</label>
</RecordType>