force-app/main/default/objects/FAQ__kav/listViews/All_Articles.listView-meta.xml
<ListView>
    <fullName>All_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>OWNER_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Articles</label>
</ListView>