force-app/main/default/objects/FAQ__kav/listViews/Archived_Articles.listView-meta.xml
<ListView>
    <fullName>Archived_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>RECORDTYPE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>OWNER_ID</columns>
    <columns>ARTICLE_ARCHIVED_DATE</columns>
    <columns>ARCHIVEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>Archived Articles</label>
</ListView>