force-app/main/default/objects/FAQ__kav/listViews/Draft_Articles.listView-meta.xml
<ListView>
    <fullName>Draft_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>ARTICLE_CREATED_DATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>OWNER_ID</columns>
    <columns>ASSIGNEDBY_USER</columns>
    <columns>ASSIGNEDTO_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Draft Articles</label>
</ListView>