force-app/main/default/objects/FAQ__kav/listViews/Published_Articles.listView-meta.xml
<ListView>
    <fullName>Published_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>RECORDTYPE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>OWNER_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Publisher__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Published Articles</label>
</ListView>